[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
num-bigint = "0.4.3"
num-iter = "0.1.43"
num-traits = "0.2.15"
